--- a/style.css
+++ b/style.css
@@ -4,6 +4,18 @@
     border: border-box;
 
 }
+/* Normal styles */
+body {
+    font-size: 16px;
+  }
+  
+  /* Responsive styles for mobile devices */
+  @media only screen and (max-width: 600px) {
+    body {
+      font-size: 14px;
+    }
+    /* Add other styles for smaller screens */
+  }
 .navbar{
     height: 60px;
     background-color: #0f1111;
