--- a/style.css
+++ b/style.css
@@ -6,18 +6,18 @@
 }
 /* Normal styles */
 body {
-    font-size: 16rem;
+    font-size: 16px;
   }
   
   /* Responsive styles for mobile devices */
-  @media only screen and (max-width: 600rem) {
+  @media only screen and (max-width: 600px) {
     body {
-      font-size: 14rem;
+      font-size: 14px;
     }
     /* Add other styles for smaller screens */
   }
 .navbar{
-    height: 60rem;
+    height: 60px;
     background-color: #0f1111;
     color: rgb(233, 234, 237);  
     display: flex;
@@ -26,33 +26,33 @@ body {
 }
 
 .nav-logo{
-    height: 50rem;
-    width: 100rem;
+    height: 50px;
+    width: 100px;
     
 }
 
 .logo{
     background-image:url("amazon_logo.png");
     background-size:cover;
-    height: 50rem;
+    height: 50px;
     width: 80%;
 }
 .border{
-    border:1.5rem solid transparent;
+    border:1.5px solid transparent;
 }
 .border:hover{
-    border: 1.5rem solid white;
+    border: 1.5px solid white;
 }
 /* box 2 */
 .add-first{
     color: #ccc;
-    font-size: 0.85rem;
-    margin-left: 15rem;
+    font-size: 0.85px;
+    margin-left: 15px;
     
 }
 .add-sec{
-font-size: 1rem;
-    margin-left: 3rem;
+font-size: 1px;
+    margin-left: 3px;
 }
 .add-icon{
 display: flex;
@@ -63,37 +63,37 @@ align-items: center;
     display: flex;
     justify-content: space-evenly;
     /* background-color: rgb(221, 113, 196); */
-    width: 620rem;
-    height: 40rem;
-    border-radius: 4rem;
+    width: 620px;
+    height: 40px;
+    border-radius: 4px;
    
 }
 .search-select{
     background-color: #f3f;
-width: 50rem;
+width: 50px;
 text-align: center;
-border-top-left-radius: 4rem;
-border-bottom-left-radius: 4rem;
+border-top-left-radius: 4px;
+border-bottom-left-radius: 4px;
 border: none;
 }
 .search-input{
     width: 100%;
-    font-size: 1rem;
+    font-size: 1px;
     border: none;
 
 }
 .search-icon{
-    width: 45rem;
+    width: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.3rem;
+    font-size: 1.3px;
     background-color: rgb(245, 192, 35);
-    border-top-right-radius: 4rem;
-    border-bottom-right-radius: 4rem;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 .nav-search:hover{
-    border: 3rem solid rgb(245, 192, 35);
+    border: 3pxsolid rgb(245, 192, 35);
 
 }
 
@@ -108,7 +108,7 @@ span{
 /* Box5 */
 
 .nav-card i {
-font-size: 35rem;
+font-size: 35px;
 
 }
 .nav-card border{
@@ -117,7 +117,7 @@ font-size: 35rem;
 }
 /* panel */
 .panel{
-    height: 40rem;
+    height: 40px;
     color: white;
 background-color: #222f3d;
 display: flex;
@@ -126,7 +126,7 @@ justify-content: space-evenly;
 }
 .panel-ops p {
     display: inline;
-    margin: 15rem;
+    margin: 15px;
 }
 .panel-ops{
     width: 75%;
@@ -140,7 +140,7 @@ justify-content: space-evenly;
 .hero-section{
     background-image: url("hero_image.jpg");
     background-size: cover;
-    height: 400rem;
+    height: 400px;
     display: flex;
 justify-content: center;
 align-items: flex-end;
@@ -148,13 +148,13 @@ align-items: flex-end;
 .hero-msg{
     background-color: white;
     color:black ;
-    height: 40rem;
+    height: 40px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     font-size: 0.85rem;
     width: 80%;
-    margin-bottom: 25rem;
+    margin-bottom: 25px;
 }
 /* shop secyion */
 .shop-section{
@@ -166,22 +166,22 @@ align-items: flex-end;
 }
 .box{
     /* border: 2px solid black; */
-    height: 350rem;
+    height: 350px;
     width: 24%;
     background-color: white;
-    padding: 20rem 0rem 15rem;
-    margin: 5rem;
+    padding: 20px 0px 15px;
+    margin: 5px;
 }
 .Box-image1{
     background-image: url("box1_image.jpg") ;
-    height:250rem;
-    margin-top: 1rem ;
-    margin-bottom: 1rem ;
+    height:250px;
+    margin-top: 1px ;
+    margin-bottom: 1px ;
     background-size: cover;
     
 }
 .box-contant{
-    margin-left: 10rem;
+    margin-left: 10px;
     margin-right: 1;
 }
 .box-contant p{
@@ -189,7 +189,7 @@ align-items: flex-end;
 }
 .Box-image2{
     background-image: url("box2_image.jpg") ;
-    height:250rem;
+    height:250px;
     margin-top: 1rem ;
     margin-bottom: 1rem ;
     background-size: cover;
@@ -197,7 +197,7 @@ align-items: flex-end;
 }
 .Box-image3{
     background-image: url("box3_image.jpg") ;
-    height:250rem;
+    height:250px;
     margin-top: 1rem ;
     margin-bottom: 1rem ;
     background-size: cover;
@@ -205,7 +205,7 @@ align-items: flex-end;
 }
 .Box-image4{
     background-image: url("box4_image.jpg") ;
-    height:250rem;
+    height:250px;
     margin-top: 1rem ;
     margin-bottom: 1rem ;
     background-size: cover;
@@ -213,7 +213,7 @@ align-items: flex-end;
 }
 .Box-image5{
     background-image: url("box5_image.jpg") ;
-    height:250rem16px;
+    height:250px;
     margin-top: 1rem ;
     margin-bottom: 1rem ;
     background-size: cover;
@@ -221,7 +221,7 @@ align-items: flex-end;
 }
 .Box-image6{
     background-image: url("box6_image.jpg") ;
-    height:250rem16px;
+    height:250px;
     margin-top: 1rem ;
     margin-bottom: 1rem ;
     background-size: cover;
@@ -229,7 +229,7 @@ align-items: flex-end;
 }
 .Box-image7{
     background-image: url("box7_image.jpg") ;
-    height:250rem;
+    height:250px;
     margin-top: 1rem ;
     margin-bottom: 1rem ;
     background-size: cover;
@@ -237,7 +237,7 @@ align-items: flex-end;
 }
 .Box-image8{
     background-image: url("box8_image.jpg") ;
-    height:250rem;
+    height:250px;
     margin-top: 1rem ;
     margin-bottom: 1rem ;
     background-size: cover;
@@ -245,12 +245,12 @@ align-items: flex-end;
 }
 /* footer */
 .footer{
-    margin-top: 15rem;
+    margin-top: 15px;
 }
 .foot-panel1{
     background-color: #37475a;
     color: white;
-    height: 50rem;
+    height: 50px;
 
     display: flex;
 justify-content: center;
@@ -260,7 +260,7 @@ font-size: 0.85;
 .foot-panel2{
     background-color: #222f3d;
     color: white;
-    height: 300rem;
+    height: 300px;
     display: flex;
     justify-content: space-evenly;
 
@@ -273,12 +273,12 @@ ul a{
     color: #dddddd;
     }
 ul p{
-    margin-top: 12rem;
+    margin-top: 12px;
 }
 .foot-panel3{
     background-color: #222f3d;
-    border-top: 2rem solid white;
-    height: 70rem;
+    border-top: 2px solid white;
+    height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -287,12 +287,12 @@ ul p{
 .logo{
     background-image:url("amazon_logo.png");
     background-size:cover;
-    height: 5rem;
-    width: 100rem;
+    height: 5px;
+    width: 100px;
 
 }
 .add-icon{
-    font-size: 3rem;
+    font-size: 3px;
     
 
 }
