--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-*{
+*{  padding: 0;
     margin: 0;
     font-family: Arial;
     border: border-box;
-
+    box-sizing: border-box;
 }
 /* Normal styles */
 body {
