--- a/style.css
+++ b/style.css
@@ -1,88 +1,109 @@
-*{  padding: 0;
+* {
+    padding: 0;
     margin: 0;
     font-family: Arial;
     border: border-box;
     box-sizing: border-box;
 }
+
+@media only screen and (max-width:414px) {
+
+
+    body {
+        background-color: #ccc;
+    }
+}
+
 /* Normal styles */
 body {
     font-size: 16px;
-  }
-  
-  /* Responsive styles for mobile devices */
-  @media only screen and (max-width: 600px) {
+}
+
+/* Responsive styles for mobile devices */
+@media only screen and (max-width: 600px) {
     body {
-      font-size: 14px;
+        font-size: 14px;
     }
+
     /* Add other styles for smaller screens */
-  }
-.navbar{
+}
+
+.navbar {
     height: 60px;
     background-color: #0f1111;
-    color: rgb(233, 234, 237);  
+    color: rgb(233, 234, 237);
     display: flex;
     align-items: center;
-    justify-content:space-evenly ;
+    justify-content: space-evenly;
 }
 
-.nav-logo{
+.nav-logo {
     height: 50px;
     width: 100px;
-    
+
 }
 
-.logo{
-    background-image:url("amazon_logo.png");
-    background-size:cover;
+.logo {
+    background-image: url("amazon_logo.png");
+    background-size: cover;
     height: 50px;
     width: 80%;
 }
-.border{
-    border:1.5px solid transparent;
+
+.border {
+    border: 1.5px solid transparent;
 }
-.border:hover{
+
+.border:hover {
     border: 1.5px solid white;
 }
+
 /* box 2 */
-.add-first{
+.add-first {
     color: #ccc;
     font-size: 0.85rem;
     margin-left: 15px;
-    
+
 }
-.add-sec{
-font-size: 1rem;
+
+.add-sec {
+    font-size: 1rem;
     margin-left: 3px;
 }
-.add-icon{
-display: flex;
-align-items: center;
+
+.add-icon {
+    display: flex;
+    align-items: center;
 }
+
 /* box3 */
-.nav-search{
+.nav-search {
     display: flex;
     justify-content: space-evenly;
     /* background-color: rgb(221, 113, 196); */
     width: 620px;
     height: 40px;
     border-radius: 4px;
-   
+
 }
-.search-select{
+
+.search-select {
     background-color: #f3f;
-width: 50px;
-text-align: center;
-border-top-left-radius: 4px;
-border-bottom-left-radius: 4px;
-border: none;
+    width: 50px;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: none;
 }
-.search-input{
+
+.search-input {
     width: 100%;
     font-size: 1rem;
     border: none;
 
 }
-.search-icon{
+
+.search-icon {
     width: 45px;
     display: flex;
     justify-content: center;
@@ -92,62 +113,72 @@ border: none;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
-.nav-search:hover{
+
+.nav-search:hover {
     border: 3px solid rgb(245, 192, 35);
 
 }
 
 /* Box 4 */
-span{
+span {
     font-size: 0.7rem;
 }
-.nav-second{
+
+.nav-second {
     font-size: 0.85rem;
     font-weight: 700;
 }
+
 /* Box5 */
 
 .nav-card i {
-font-size: 35px;
+    font-size: 35px;
 
 }
-.nav-card border{
+
+.nav-card border {
     font-size: 0.85rem;
     font-weight: 700;
 }
+
 /* panel */
-.panel{
+.panel {
     height: 40px;
     color: white;
-background-color: #222f3d;
-display: flex;
-align-items: center;
-justify-content: space-evenly;
+    background-color: #222f3d;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
+
 .panel-ops p {
     display: inline;
     margin: 15px;
 }
-.panel-ops{
+
+.panel-ops {
     width: 75%;
     font-size: 0.85rem;
 }
-.panel-deals{
+
+.panel-deals {
     font-size: 0.9rem;
     font-weight: 700;
 }
+
 /* hero section */
-.hero-section{
+.hero-section {
     background-image: url("hero_image.jpg");
     background-size: cover;
     height: 400px;
     display: flex;
-justify-content: center;
-align-items: flex-end;
+    justify-content: center;
+    align-items: flex-end;
 }
-.hero-msg{
+
+.hero-msg {
     background-color: white;
-    color:black ;
+    color: black;
     height: 40px;
     display: flex;
     justify-content: space-evenly;
@@ -156,15 +187,17 @@ align-items: flex-end;
     width: 80%;
     margin-bottom: 25px;
 }
+
 /* shop secyion */
-.shop-section{
+.shop-section {
     display: flex;
     flex-wrap: wrap;
 
     justify-content: space-evenly;
     background-color: #aeb9b7;
 }
-.box{
+
+.box {
     /* border: 2px solid black; */
     height: 350px;
     width: 24%;
@@ -172,92 +205,105 @@ align-items: flex-end;
     padding: 20px 0px 15px;
     margin: 5px;
 }
-.Box-image1{
-    background-image: url("box1_image.jpg") ;
-    height:250px;
-    margin-top: 1rem ;
-    margin-bottom: 1rem ;
+
+.Box-image1 {
+    background-image: url("box1_image.jpg");
+    height: 250px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     background-size: cover;
-    
+
 }
-.box-contant{
+
+.box-contant {
     margin-left: 10px;
     margin-right: 10px;
 }
-.box-contant p{
+
+.box-contant p {
     color: blue;
 }
-.Box-image2{
-    background-image: url("box2_image.jpg") ;
-    height:250px;
-    margin-top: 1rem ;
-    margin-bottom: 1rem ;
+
+.Box-image2 {
+    background-image: url("box2_image.jpg");
+    height: 250px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     background-size: cover;
-    
+
 }
-.Box-image3{
-    background-image: url("box3_image.jpg") ;
-    height:250px;
-    margin-top: 1rem ;
-    margin-bottom: 1rem ;
+
+.Box-image3 {
+    background-image: url("box3_image.jpg");
+    height: 250px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     background-size: cover;
-    
+
 }
-.Box-image4{
-    background-image: url("box4_image.jpg") ;
-    height:250px;
-    margin-top: 1rem ;
-    margin-bottom: 1rem ;
+
+.Box-image4 {
+    background-image: url("box4_image.jpg");
+    height: 250px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     background-size: cover;
-    
+
 }
-.Box-image5{
-    background-image: url("box5_image.jpg") ;
-    height:250px;
-    margin-top: 1rem ;
-    margin-bottom: 1rem ;
+
+.Box-image5 {
+    background-image: url("box5_image.jpg");
+    height: 250px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     background-size: cover;
-    
+
 }
-.Box-image6{
-    background-image: url("box6_image.jpg") ;
-    height:250px;
-    margin-top: 1rem ;
-    margin-bottom: 1rem ;
+
+.Box-image6 {
+    background-image: url("box6_image.jpg");
+    height: 250px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     background-size: cover;
-    
+
 }
-.Box-image7{
-    background-image: url("box7_image.jpg") ;
-    height:250px;
-    margin-top: 1rem ;
-    margin-bottom: 1rem ;
+
+.Box-image7 {
+    background-image: url("box7_image.jpg");
+    height: 250px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     background-size: cover;
-    
+
 }
-.Box-image8{
-    background-image: url("box8_image.jpg") ;
-    height:250px;
-    margin-top: 1rem ;
-    margin-bottom: 1rem ;
+
+.Box-image8 {
+    background-image: url("box8_image.jpg");
+    height: 250px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     background-size: cover;
-    
+
 }
+
 /* footer */
-.footer{
+.footer {
     margin-top: 15px;
 }
-.foot-panel1{
+
+.foot-panel1 {
     background-color: #37475a;
     color: white;
     height: 50px;
 
     display: flex;
-justify-content: center;
-align-items: center;
-font-size: 0.85;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.85;
 }
-.foot-panel2{
+
+.foot-panel2 {
     background-color: #222f3d;
     color: white;
     height: 300px;
@@ -266,16 +312,19 @@ font-size: 0.85;
 
 
 }
-ul a{
+
+ul a {
     display: block;
     font-size: .85rem;
     margin-top: 10px;
     color: #dddddd;
-    }
-ul p{
+}
+
+ul p {
     margin-top: 12px;
 }
-.foot-panel3{
+
+.foot-panel3 {
     background-color: #222f3d;
     border-top: 2px solid white;
     height: 70px;
@@ -284,25 +333,17 @@ ul p{
     align-items: center;
 
 }
-.logo{
-    background-image:url("amazon_logo.png");
-    background-size:cover;
+
+.logo {
+    background-image: url("amazon_logo.png");
+    background-size: cover;
     height: 5px;
     width: 100px;
 
 }
-.add-icon{
+
+.add-icon {
     font-size: 3rem;
-    
+
 
 }
-
-
-
-
-
-
-
-
-
-
