--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 
     body {
         background-color: #ccc;}
-        /* .shop-section{flex-direction: column;}
-} */
+        /* .shop-section{flex-direction: column;} */
+} 
 
 /* Normal styles */
 body {
