--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 
-@media only screen and (max-width:1080px) {
+@media only screen and (min-width:1080px) {
 
 
     body {
