--- a/style.css
+++ b/style.css
@@ -161,9 +161,19 @@ span {
     justify-content: space-evenly;
     align-items: center;
     font-size: 0.85rem;
-    width: 80%;
+    width: 87%;
     margin-bottom: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.hero-msg p span {
+
+    color: #3416d1;
+    font-size: 0.85rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
 
 /* shop secyion */
 .shop-section {
@@ -349,51 +359,72 @@ span {
         margin: 9px;
     }
 }
+
 /* small medium */
 @media (max-width: 412px) {
     .logo {
         height: 38px;
         width: 126%;
     }
+
     .add-first {
         font-size: 6px;
     }
+
     span {
         font-size: 8px;
         margin-left: 5px;
     }
+
     p.nan-second {
         font-size: 13px;
         font-weight: bolder;
         margin-left: 5px;
     }
+
     .nav-card i {
         font-size: 20px;
     }
+
     .panel-all {
         margin-left: 18px;
         font-size: 8px;
     }
+
     .elc p {
         font-size: 9px;
         margin-right: -20px;
         color: #aeb9b7;
         font-weight: bolder;
     }
+
     .panel-ops {
         width: 79%;
         font-size: 6px;
         display: flex;
         color: #aeb9b7;
     }
+
     .hero-section {
         height: 126px;
     }
+
     .box {
         width: 95%;
     }
+}
 
-    
+@media (max-width: 375px) {
+    .logo {
+        height: 38px;
+        width: 138%;
+    }
+
+    .foot-panel1 {
+        height: 40vh;
+        width: 95vw;
+        margin: 8px;
+    }
 
 
 
